# ps4debug

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  ksdk.c  ksdk.h  send.sh
debugger/: Makefile
debugger/include/: console.h  crc32.h  debug.h  debugger.h  errno.h  kdbg.h  kern.h  net.h  proc.h  protocol.h  ptrace.h  server.h
debugger/source/: console.c  crc32.c  debug.c  kdbg.c  kern.c  main.c  net.c  proc.c  ptrace.c  server.c
include/: ksdk.h  ksdk.inc  ksdk_bsd.h  ksdk_util.h  sparse.h
installer/: Makefile  linker.x
installer/include/: elf.h  installer.h  proc.h  rpcasm.h  syscall.h
installer/source/: elf.c  embed.s  installer.c  main.c  proc.c  syscall.s
kdebugger/: Makefile  crt0.s  kdebugger.x
kdebugger/include/: elf.h  hooks.h  installer.h  proc.h  rpcasm.h
kdebugger/source/: elf.c  embed.s  hooks.c  installer.c  main.c  proc.c
libdbg/: libdbg.cs
libdbg/csharp/: PS4DBG.Console.cs  PS4DBG.Debug.cs  PS4DBG.Kernel.cs  PS4DBG.Proc.cs  PS4DBG.cs  Process.cs  Registers.cs  libdebug.csproj
libdbg/csharp/Properties/: AssemblyInfo.cs
libdebug/: README.md
libdebug/cpp/: CMakeLists.txt
libdebug/cpp/example/: example.cpp
libdebug/cpp/include/: PS4DBG.hpp  Platform.hpp  Process.hpp  Registers.hpp
libdebug/cpp/source/: PS4DBG.cpp  Process.cpp
libdebug/csharp/: PS4DBG.Debug.cs  PS4DBG.Kernel.cs  PS4DBG.Proc.cs  PS4DBG.cs  Process.cs  Registers.cs  libdebug.csproj
source/: ksdk.c
